--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/Configure.cshtml
@@ -67,23 +67,6 @@
                 @Html.ValidationMessageFor(model => model.Secret)
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.ExperienceProfileId)
-            </td>
-            <td class="adminData">
-                @Html.SettingEditorFor(model => model.ExperienceProfileId)
-
-				<a id="UpsertExperienceProfile" class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
-				   @(Model.ClientId.HasValue() && Model.Secret.HasValue() ? "" : "disabled='disabled'")
-				   href="@Url.Action("UpsertExperienceProfile", "PayPalPlus", new { area = Plugin.SystemName, profileId = Model.ExperienceProfileId })">
-					<i class="fa fa-gear"></i>&nbsp;
-					<span id="UpsertExperienceProfileButtonLabel"></span>!
-				</a>
-
-                @Html.ValidationMessageFor(model => model.ExperienceProfileId)
-            </td>
-        </tr>
 		<tr class="adminSeparator">
 			<td colspan="2">
 				<div class="admin-config-group">
@@ -99,6 +82,66 @@
 			</td>
 			<td class="adminData">
 				@Html.DropDownListFor(model => model.SecurityProtocol, Model.AvailableSecurityProtocols, T("Common.Unspecified"))
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.ExperienceProfileId)
+			</td>
+			<td class="adminData">
+				@Html.SettingEditorFor(model => model.ExperienceProfileId)
+
+				<a id="UpsertExperienceProfile" class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+				   @(Model.ClientId.HasValue() && Model.Secret.HasValue() ? "" : "disabled='disabled'")
+				   href="@Url.Action("UpsertExperienceProfile", "PayPalPlus", new { area = Plugin.SystemName })">
+					<i class="fa fa-fw @(Model.ExperienceProfileId.HasValue() ? "fa-refresh" : "fa-list-alt")"></i>
+					&nbsp;<span id="UpsertExperienceProfileButtonLabel"></span>!
+				</a>
+
+				@if (Model.ExperienceProfileId.HasValue())
+				{
+					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					   href="@Url.Action("DeleteExperienceProfile", "PayPalPlus", new { area = Plugin.SystemName })">
+						<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")
+					</a>
+				}
+
+				@Html.ValidationMessageFor(model => model.ExperienceProfileId)
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.WebhookId)
+			</td>
+			<td class="adminData">
+				@* IPNs and webhook messages have no store context, so multistore configuration not possible here *@
+				@Html.EditorFor(model => model.WebhookId)
+
+				@if (Model.WebhookId.HasValue())
+				{
+					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					   href="@Url.Action("DeleteWebhook", "PayPalPlus", new { area = Plugin.SystemName })">
+						<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")
+					</a>
+				}
+				else
+				{
+					<a class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					   href="@Url.Action("CreateWebhook", "PayPalPlus", new { area = Plugin.SystemName })">
+						<i class="fa fa-plus"></i>&nbsp;@T("Common.AddNew")
+					</a>
+				}
+
+				@Html.ValidationMessageFor(model => model.WebhookId)
+			</td>
+		</tr>
+		<tr class="@(Model.WebhookId.HasValue() ? "" : "hide")">
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.WebhookValidation)
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.WebhookValidation, Model.AvailableWebhookValidations)
+				@Html.ValidationMessageFor(model => model.WebhookValidation)
 			</td>
 		</tr>
 		<tr class="adminSeparator">
