--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/bs4/custom/_utils.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/bs4/custom/_utils.scss
@@ -104,17 +104,17 @@ code {
 // Unfold animation
 
 .dropdown-toggle + .dropdown-menu {
-    display: block;
+    /*display: block;
     transform: translateY(20px);
     opacity: 0;
     visibility: hidden;
-    transition: all 0.18s ease-in-out;
+    transition: all 0.18s ease-in-out;*/
 }
 
 .open > .dropdown-toggle + .dropdown-menu {
-    transform: translateY(0);
+    /*transform: translateY(0);
     opacity: 1;
-    visibility: visible;
+    visibility: visible;*/
 }
 
 
