--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -10,6 +10,70 @@ $enable-transitions:        true;
 $enable-hover-media-query:  false; 
 $enable-grid-classes:       true;
 
+$headings-line-height:      1.3;
+
+//$font-size-base:            .92rem;
+$line-height:                1.8;
+$line-height-sm:             1.8;
+$line-height-lg:             1.5;
+
+$display1-size:             6rem;
+$display2-size:             5.5rem;
+$display3-size:             4.5rem;
+$display4-size:             3.5rem;
+
+$border-radius:             3px;
+$border-radius-lg:          4px;
+$border-radius-sm:          2px;
+
+$btn-border-radius:         2px !default;
+$btn-border-radius-lg:      3px !default;
+$btn-border-radius-sm:      2px !default;
+
+$btn-font-weight:           600;
+/*$btn-padding-x:             1.8rem;
+$btn-padding-x-sm:          1.2rem;
+$btn-padding-x-lg:          2rem;*/
+$btn-padding-y-lg:          1rem;
+
+/*$dropdown-border-color:     #ddd;
+$popover-border-color:      #ddd;
+$card-border-color:         rgba(0,0,0, 0.12);*/
+
+
+// Spacers
+
+$spacer:                     1rem;
+$spacer-x:                   $spacer !default;
+$spacer-y:                   $spacer !default;
+$spacers: (
+  0: (
+    x:   0,
+    y:   0
+  ),
+  '05': (
+    x:   ($spacer-x * 0.5),
+    y:   ($spacer-x * 0.5)
+  ),
+  1: (
+    x:   $spacer-x,
+    y:   $spacer-y
+  ),
+  2: (
+    x:   ($spacer-x * 1.5),
+    y:   ($spacer-y * 1.5)
+  ),
+  3: (
+    x:   ($spacer-x * 3),
+    y:   ($spacer-y * 3)
+  ),
+  4: (
+    x:   ($spacer-x * 6),
+    y:   ($spacer-y * 6)
+  )
+);
+
+
 // Bootstrap
 @import "bs4/scss/bootstrap.scss"; 
 
