--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CategoryNavigation.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CategoryNavigation.cshtml
@@ -42,13 +42,13 @@
 
 @if (Model.Root.HasChildren)
 {
-    <div class="block block-bordered block-category-navigation">
-        <div class="block-title">
+    <div class="block block-bordered block-category-navigation card">
+        <div class="card-header">
             @T("Categories")
         </div>
-        <div class="block-body listbox">
+        <div class="block-body listbox card-block">
             <nav class="nav-category">
-                @CreateMenu(Model.Root.Children, "level-1")
+                @CreateMenu(Model.Root.Children, "level-1 list-unstyled")
             </nav>
         </div>
     </div>
