--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/PopularProductTags.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/PopularProductTags.cshtml
@@ -2,13 +2,13 @@
 @using SmartStore.Web.Models.Catalog;
 @if (Model.Tags.Count > 0)
 {
-    <div class="block block-bordered block-popular-tags">
-        <div class="block-title">
+    <div class="block block-bordered block-popular-tags card">
+        <div class="card-header">
             @T("Products.Tags.Popular")
         </div>
-        <div class="block-body listbox">
+        <div class="block-body listbox card-block">
             <div class="tags">
-                <ul>
+                <ul class="list-unstyled">
                     @foreach (var item in Model.Tags)
                     {
                         <li><a href="@Url.RouteUrl("ProductsByTag", new { productTagId = item.Id, SeName = item.SeName })" style="font-size:@(Model.GetFontSize(item))%;">@item.Name</a>&nbsp;&nbsp;
