--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/_ProductListOptions.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/_ProductListOptions.cshtml
@@ -5,34 +5,31 @@
 {
     var selectedOption = options.FirstOrDefault(x => x.Selected);
     var floatClass = rightFloat ? "pull-right" : "pull-left";
-    <div class="btn-group @floatClass">
-		<a class="btn dropdown-toggle tooltip-toggle" data-toggle="dropdown" href="#" rel="nofollow" title="@label: @selectedOption.Text">
+    <div class="btn-group m-r-05 @floatClass">
+		<button type="button" class="btn btn-secondary dropdown-toggle tooltip-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" title="@label: @selectedOption.Text">
 			@if (icon.HasValue())
 			{
 				<i class="fa fa-fw fa-@icon"></i>
 			}
 			@selectedOption.Text
-			<span class="fa fa-fw fa-caret-down"></span>
-		</a>
-        <ul class="dropdown-menu">
+		</button>
+        <div class="dropdown-menu">
             @foreach(var opt in options)
 			{
-                <li @Html.Attr("class", "disabled", opt.Selected)>
-                    <a href="@opt.Url">@opt.Text</a>
-                </li>
+				<a class="dropdown-item@(opt.Selected ? " disabled" : "")" href="@opt.Url">@opt.Text</a>
             }
-        </ul>
+        </div>
     </div>
 }
 
-<div class="product-list-options clearfix">
+<div class="product-list-options clearfix m-y-1">
     @if (Model.AllowProductViewModeChanging)
     {
         <div class="product-viewmode pull-right">
-            <div class="btn-group" data-toggle="buttons-radio">
+            <div class="btn-group">
                 @foreach (var mode in Model.AvailableViewModes)
                 {
-                    <a href="@mode.Url" class='btn@(mode.Selected ? " active" : "") tooltip-toggle' rel="tooltip nofollow" title='@T("Categories.ViewMode"): @mode.Text'>
+					<a href="@mode.Url" class='btn btn-icon btn-secondary@(mode.Selected ? " active" : "") tooltip-toggle' rel="tooltip nofollow" title='@T("Categories.ViewMode"): @mode.Text'>
                         @if ((string)mode.ExtraData == "grid") {
                             <i class="fa fa-th"></i>
                         }
