--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/LanguageSelector.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Common/LanguageSelector.cshtml
@@ -9,10 +9,10 @@
     var webHelper = EngineContext.Current.Resolve<IWebHelper>();
     
     <div id="language-selector" class="regional-selector">
-        <ul class="unstyled clearfix">
+        <ul class="list-inline clearfix">
             @foreach (var lang in Model.AvailableLanguages)
             {
-                <li @Html.Attr("class", "selected", Model.CurrentLanguageId == lang.Id)>
+                <li class="list-inline-item@(Model.CurrentLanguageId == lang.Id ? " selected" : "")">
                     <a title="@lang.NativeName" rel="tooltip nofollow" class='language @(Model.UseImages ? "flag" : "regional-label")'
                         href="@webHelper.ModifyQueryString(Url.RouteUrl("ChangeLanguage", new { langid = lang.Id }), "returnurl=" + Url.Encode(Model.ReturnUrls[lang.SeoCode]), null)">
                         @if (Model.UseImages) 
