New theme: added typo css classes

--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/theme.scss
@@ -79,6 +79,7 @@ $spacers: (
 
 // Bootstrap custom
 @import 'bs4/custom/_colors.scss';
+@import 'bs4/custom/_typo.scss';
 @import 'bs4/custom/_buttons.scss';
 @import 'bs4/custom/_forms.scss';
 @import 'bs4/custom/_accordion.scss';
