--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Views/Catalog/CategoryTemplate.ProductsInGridOrLines.cshtml
@@ -151,7 +151,7 @@
 				    <div class="card-deck card-cols-sm-1 card-cols-md-2 card-cols-lg-3 x-card-cols-xl-4 product-grid">
 						@foreach (var product in Model.Products)
 						{
-							<article class="card card-block text-xs-center">
+							<article class="card card-block card-shadow text-xs-center">
 								@Html.Partial("_ProductBox", product)
 							</article>
 						}
