--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/Configure.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/Configure.cshtml
@@ -6,6 +6,8 @@
 @{
 	Layout = "";
 	Html.AddCssFileParts(true, "~/Plugins/SmartStore.PayPal/Content/smartstore.paypal.css");
+
+	var hasCredentials = (Model.ClientId.HasValue() && Model.Secret.HasValue());
 }
 
 <div class="plugin-configuration">
@@ -91,16 +93,15 @@
 			<td class="adminData">
 				@Html.SettingEditorFor(model => model.ExperienceProfileId)
 
-				<a id="UpsertExperienceProfile" class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
-				   @(Model.ClientId.HasValue() && Model.Secret.HasValue() ? "" : "disabled='disabled'")
+				<a class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');" @(hasCredentials ? "" : "disabled='disabled'")
 				   href="@Url.Action("UpsertExperienceProfile", "PayPalPlus", new { area = Plugin.SystemName })">
-					<i class="fa fa-fw @(Model.ExperienceProfileId.HasValue() ? "fa-refresh" : "fa-list-alt")"></i>
-					&nbsp;<span id="UpsertExperienceProfileButtonLabel"></span>!
+					<i class="fa fa-fw @(Model.ExperienceProfileId.HasValue() ? "fa-refresh" : "fa-list-alt")"></i>&nbsp;
+					@T(Model.ExperienceProfileId.HasValue() ? "Common.Refresh" : "Common.AddNew")
 				</a>
 
 				@if (Model.ExperienceProfileId.HasValue())
 				{
-					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');" @(hasCredentials ? "" : "disabled='disabled'")
 					   href="@Url.Action("DeleteExperienceProfile", "PayPalPlus", new { area = Plugin.SystemName })">
 						<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")
 					</a>
@@ -119,14 +120,14 @@
 
 				@if (Model.WebhookId.HasValue())
 				{
-					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					<a class="btn btn-danger" onclick="return confirm('@T("Admin.Common.AreYouSure")');" @(hasCredentials ? "" : "disabled='disabled'")
 					   href="@Url.Action("DeleteWebhook", "PayPalPlus", new { area = Plugin.SystemName })">
 						<i class="fa fa-trash-o"></i>&nbsp;@T("Admin.Common.Delete")
 					</a>
 				}
 				else
 				{
-					<a class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');"
+					<a class="btn btn-warning" onclick="return confirm('@T("Admin.Common.AreYouSure")');" @(hasCredentials ? "" : "disabled='disabled'")
 					   href="@Url.Action("CreateWebhook", "PayPalPlus", new { area = Plugin.SystemName })">
 						<i class="fa fa-plus"></i>&nbsp;@T("Common.AddNew")
 					</a>
@@ -204,15 +205,3 @@
         </tr>
     </table>
 }
-
-<script type="text/javascript">
-	jQuery(document).ready(function () {
-
-		// set upsert experience profile button label
-		$('#@Html.FieldIdFor(x => x.ExperienceProfileId)').change(function () {
-			var labelText = (_.isEmpty($(this).val()) ? '@T("Plugins.SmartStore.PayPal.CreateNow")' : '@T("Plugins.SmartStore.PayPal.UpdateNow")');
-			$('#UpsertExperienceProfileButtonLabel').html(labelText);
-		}).trigger('change');
-
-	});
-</script>
