--- a/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/shared/_colors.scss
+++ b/src/Presentation/SmartStore.Web/Themes/NewAlpha/Content/shared/_colors.scss
@@ -1,4 +1,4 @@
-/// <reference path="../scss/bootstrap.scss" />
+/// <reference path="../bs4/scss/bootstrap.scss" />
 
 // ==========================================================================
 //
