PayPal Plus: Render full description on top of the payment wall

--- a/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalPlus/PaymentWall.cshtml
@@ -40,6 +40,13 @@
 				</div>
 			}
 
+			if (Model.FullDescription.HasValue())
+			{
+				<div class="payment-method-description">
+					@Html.Raw(Model.FullDescription)
+				</div>
+			}
+
 			<div id="PayPalPlusPaymentWall"></div>
 
 			<div class="select-button clearfix">
